--- a/CodeCamp/HTML/style-html.css
+++ b/CodeCamp/HTML/style-html.css
@@ -1,81 +1,104 @@
+/*
+.bgimg {
+  background-image: url(https://cdn.pixabay.com/photo/2020/10/30/16/27/mountain-5699035_1280.jpg);
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}*/
+
+.w3-animate-opacity{
+  animation:opac 0.8s
+}
+
+.w3-display-container{position:relative}
+
+
+.text-white{
+  color:#fff!important
+}
+
+
+/*Positon middle for text*/
+.display-middle{
+  position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%)
+}
+
+
+
 .background{  
     background-image: url(https://cdn.pixabay.com/photo/2020/10/30/16/27/mountain-5699035_1280.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    min-height: 100%
 }
 
-.container{
+
+/*.container{
     justify-content: center;
     color: azure;
     text-align: center;
     text-shadow: #535757;
     font-size: 2em;
-}
-
-ul#top_nav_menu{
-    position:relative;
-    display:block;
-    widows: 100%;
-    height:35px;
-    padding:0px;
-    margin:0px;
-    list-style:none;    
-    background-color:#535757;
-    overflow:visible;
-    line-height:35px;
-}
-/* css ส่วนของเมนูหลัก */
-ul#top_nav_menu li{
-    background-color: rgb(23, 26, 23);
-    position:relative;
-    display:block;
-    float:left;
-    height:35px;
-    padding:0px 15px;
-    margin:1px;
-    list-style:none;    
-    border: 1px doub rgb(245, 246, 247);
-    
-    
-  }
-   ul#top_nav_menu li a{
-    text-decoration:none;   
-    text-transform:uppercase;
-    color:silver
-  }
-
-/* menubar */
-
-/*ul{
-    list-style: none;
-}
-ul li{
-    float: left;
-    width: 150px;
-    height: 50px;
-    background-color: #62768b;
-    opacity: 0.7;
-    line-height: 50px;
-    text-align: center;
-    font-size: 1.6rem;
-    margin-right: 2.5px;
-}
-ul li a{
-    text-decoration: none;
-    color: #ffa07a;
-    display: block;
-}
-ul li a:hover{
-    background-color: #ffa07a;
-    color: #fff;
-    cursor: pointer;
-}
-ul li ul li{
-    display: none;
-}
-ul li:hover ul li{
-    display: block;
 }*/
 
-/* End menubar */
+/* css ส่วนของเมนูหลัก */
+ul {
+    list-style-type: none;
+    margin: 0 ;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+  }
+  
+  li {
+    float: left;
+    border-right:1px solid #bbb;
+  }
+  
+  li:last-child {
+    border-right: none;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #111;
+  }
+  
+
+  .active {
+    background-color: #4CAF50;
+  }
+
+  /*รูปส่วนของ  bar*/
+
+
+
+
+
+/* profile */
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    background-color: DodgerBlue;
+  }
+  
+  .flex-container > div {
+    background-color: #f1f1f1;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
