--- a/CodeCamp/HTML/style-html.css
+++ b/CodeCamp/HTML/style-html.css
@@ -13,8 +13,23 @@
 .w3-display-container{position:relative}
 
 
+.border-head {
+  border: 2px solid black;
+  border-radius: 8px;
+  background-color:rgba(107, 103, 103, 0.466);
+}
+
 .text-white{
   color:#fff!important
+}
+
+.align{
+  text-align: center;
+  }
+
+.img-align{
+  display: block;
+  margin: auto;
 }
 
 
@@ -24,7 +39,7 @@
 }
 
 
-
+/*
 .background{  
     background-image: url(https://cdn.pixabay.com/photo/2020/10/30/16/27/mountain-5699035_1280.jpg);
     background-repeat: no-repeat;
@@ -32,7 +47,12 @@
     background-attachment: fixed;
     min-height: 100%
 }
+*/
 
+.img-profile{
+border-radius: 50%;
+
+}
 
 /*.container{
     justify-content: center;
@@ -43,6 +63,7 @@
 }*/
 
 /* css ส่วนของเมนูหลัก */
+/*
 ul {
     list-style-type: none;
     margin: 0 ;
@@ -80,7 +101,7 @@ ul {
   .active {
     background-color: #4CAF50;
   }
-
+*/
   /*รูปส่วนของ  bar*/
 
 
@@ -88,6 +109,7 @@ ul {
 
 
 /* profile */
+/*
 .flex-container {
     display: flex;
     flex-wrap: nowrap;
@@ -102,3 +124,87 @@ ul {
     line-height: 75px;
     font-size: 30px;
   }
+*/
+
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  background-image: url(https://cdn.pixabay.com/photo/2020/10/30/16/27/mountain-5699035_1280.jpg);
+  /*min-height: 100%*/
+  background-repeat: no-repeat;
+  background-size: cover; 
+  background-attachment: fixed;
+}
+
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create three equal columns that floats next to each other */
+
+.column-Gap {
+  float: left;
+  width: 1%;
+  padding: 1px;
+}
+
+.column1 {
+  float: left;
+  width: 30%;
+  border-radius: 15px;
+  padding: 15px;
+  background-color: #f2f2f2ce;
+  border: 1px solid rgb(0, 0, 0); 
+  
+}
+
+.column2 {
+  float: left;
+  width: 68%;
+  border-radius: 15px;
+  padding: 15px;
+  background-color: #f2f2f2ce;
+  border: 1px solid rgb(0, 0, 0); 
+  
+}
+
+
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column {
+    width: 100%;
+  }
+}
+
